--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
 	"name": "fcc-learn-npm-package-json",
 	"dependencies": {
 		"express": "^4.14.0"
+		"author": "Jane Doe"
+		
 	},
 	"main": "server.js",
 	"scripts": {
